fixed css padding that caused the website to break on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ a {
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 30px;
-    padding: 40px;
+    padding: 10px;
     width: 100vw;
     height: 100vh;
 }
@@ -45,7 +45,7 @@ hr {
 
 .bottom-information {
     margin-bottom: auto;
-    font-size: 3.5vh;
+    font-size: 150%;
 }
 
 .information * {
@@ -82,7 +82,7 @@ hr {
 .error {
     color: red;
     font-weight: bolder;
-    font-size: 1.5vh;
+    font-size: 1.5%;
     margin: 10px auto;
     text-align: center;
 }
@@ -95,9 +95,10 @@ a {
     font-size: 4vw;
 }
 
-@media screen and (min-width: calc(125vh)) {
+@media screen and (min-width: 800px) {
     .grid-container {
         grid-template-columns: 2fr 1fr;
+        padding: 40px;
     }
 
     .experience {
